--- a/css/index.css
+++ b/css/index.css
@@ -48,14 +48,41 @@
     align-items: center;
 }
 .formulario {
-    width: 100%;
-    height: 100vmax;
-    background-color: rgba(255, 0, 0, 0.377);
+    width: 80%;
+    height: 30rem;
+    background-color: white;
+    border: 1px solid black;
+    border-radius: 5px;
     position: absolute;
-    top: 0;
     display: none;
 }
+.div_controles {
+    width: 100%;
 
+    display: flex;
+    justify-content: end;
+}
+.btn_cerrar {
+    padding: 0.5rem;
+    font-size: 3rem;
+    font-weight: 600;
+
+    cursor: pointer;
+}
+.btn_cerrar:hover {
+    color: rgb(124, 0, 0);
+}
+
+.btn-crear {
+    max-width: 10rem;
+    background-color: greenyellow;
+    padding: 3rem;
+    cursor: pointer;
+}
+
+
+
+/* ---------- */
 .ocultar {
     display: none;
 }
